// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 1`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ CODE SYMBOL]",
  "#,##0.00[$ CODE SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$CODE SYMBOL]#,##0",
  "[$CODE SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 2`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ TEST SYMBOL]",
  "#,##0.00[$ TEST SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$TEST SYMBOL]#,##0",
  "[$TEST SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 3`] = `
[
  "#,##0[$SYMBOL]",
  "#,##0.00[$SYMBOL]",
  "#,##0[$ CODE SYMBOL]",
  "#,##0.00[$ CODE SYMBOL]",
  "[$SYMBOL]#,##0",
  "[$SYMBOL]#,##0.00",
  "[$CODE SYMBOL]#,##0",
  "[$CODE SYMBOL]#,##0.00",
]
`;

exports[`custom currency sidePanel component Sidepanel change code input or symbol input --> change currency proposals 4`] = `
[
  "#,##0[$TEST]",
  "#,##0.00[$TEST]",
  "#,##0[$ CODE TEST]",
  "#,##0.00[$ CODE TEST]",
  "[$TEST]#,##0",
  "[$TEST]#,##0.00",
  "[$CODE TEST]#,##0",
  "[$CODE TEST]#,##0.00",
]
`;
